[project]
name = "comfyui-no-one-above-me"
description = "Fix node to top."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-no-one-above-me"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-no-one-above-me"
Icon = ""
